@@ -27,6 +27,7 @@ class EmailServiceTest {
     static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:17");
 
     @Container
+    @SuppressWarnings("resource")
     static GenericContainer<?> mailpit = new GenericContainer<>(DockerImageName.parse("axllent/mailpit:latest"))
             .withExposedPorts(1025, 8025);
 
@@ -56,11 +57,42 @@ class EmailServiceTest {
 
         assertThat(response).isNotNull();
         assertThat(response.messages()).isNotEmpty();
-        assertThat(response.messages().get(0).subject()).isEqualTo("Mailpit Integration Test");
-        assertThat(response.messages().get(0).to().get(0).address()).isEqualTo("test@earth-pulse.local");
+        assertThat(response.messages().getFirst().subject()).isEqualTo("Mailpit Integration Test");
+        assertThat(response.messages().getFirst().to().getFirst().address()).isEqualTo("test@earth-pulse.local");
+    }
+
+    @Test
+    void sendHtmlEmail_shouldDeliverHtmlBodyToMailpit() {
+        emailService.sendHtmlEmail(
+                "html-test@earth-pulse.local",
+                "Mailpit HTML Integration Test",
+                "<h1>Hello</h1><p>Email trimis din EmailServiceTest.</p>"
+        );
+
+        String mailpitApiUrl = "http://" + mailpit.getHost() + ":" + mailpit.getMappedPort(8025);
+        var response = RestClient.create()
+                .get()
+                .uri(mailpitApiUrl + "/api/v1/messages")
+                .retrieve()
+                .body(MailpitMessages.class);
+
+        assertThat(response).isNotNull();
+        assertThat(response.messages()).isNotEmpty();
+        String messageId = response.messages().getFirst().id();
+        assertThat(response.messages().getFirst().subject()).isEqualTo("Mailpit HTML Integration Test");
+
+        var detail = RestClient.create()
+                .get()
+                .uri(mailpitApiUrl + "/api/v1/message/" + messageId)
+                .retrieve()
+                .body(MailpitMessageDetail.class);
+
+        assertThat(detail).isNotNull();
+        assertThat(detail.html()).contains("<h1>Hello</h1>");
     }
 
     private record MailpitMessages(java.util.List<MailpitMessage> messages) {}
-    private record MailpitMessage(@JsonProperty("Subject") String subject, @JsonProperty("To") java.util.List<MailpitAddress> to) {}
+    private record MailpitMessage(@JsonProperty("ID") String id, @JsonProperty("Subject") String subject, @JsonProperty("To") java.util.List<MailpitAddress> to) {}
     private record MailpitAddress(@JsonProperty("Address") String address) {}
+    private record MailpitMessageDetail(@JsonProperty("HTML") String html) {}
 }
